2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/Crate__c.object-meta.xml
<CustomObject>
    <description>Holds Collector Crate information</description>
    <label>Crate</label>
    <nameField>
        <label>Crate ID (barcode)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Crates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>