2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/CBarcode_ID__c.field-meta.xml
<CustomField>
    <fullName>CBarcode_ID__c</fullName>
    <label>Crate Barcode ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>