2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Roll Up Summary for Artwork</description>
    <inlineHelpText>Roll Up Summary for Artwork</inlineHelpText>
    <label>Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>