2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Crate_CBM__c.field-meta.xml
<CustomField>
    <fullName>Crate_CBM__c</fullName>
    <formula>( Length__c * Width__c * Height__c) / 1000000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crate CBM</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>