2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Crate_No__c.field-meta.xml
<CustomField>
    <fullName>Crate_No__c</fullName>
    <label>Crate No.</label>
    <length>9</length>
    <type>Text</type>
</CustomField>