2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Cycle_Count__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Count__c</fullName>
    <inlineHelpText>Sighting by Outer Pack</inlineHelpText>
    <label>Cycle Count</label>
    <type>Date</type>
</CustomField>