2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Date_Out__c.field-meta.xml
<CustomField>
    <fullName>Date_Out__c</fullName>
    <label>Date Out</label>
    <type>Date</type>
</CustomField>