2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <label>Height</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>