2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/IPPC_Stamp__c.field-meta.xml
<CustomField>
    <fullName>IPPC_Stamp__c</fullName>
    <inlineHelpText>Heat Treated or Fumigated</inlineHelpText>
    <label>IPPC Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>