2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Field Update</description>
    <inlineHelpText>Box will be checked if there is at least a line item.</inlineHelpText>
    <label>Line Item</label>
    <type>Checkbox</type>
</CustomField>