2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/Physical_Check_done_on__c.field-meta.xml
<CustomField>
    <fullName>Physical_Check_done_on__c</fullName>
    <inlineHelpText>Old Field</inlineHelpText>
    <label>Physical Check done on</label>
    <type>Date</type>
</CustomField>