2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>&quot;---------------------------&quot;+Name+&quot;----------------------------&quot; + BR() + &quot;&quot; +IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=300x300&amp;data=http://stg-helutrans.cs82.force.com/QrCodeScanner?Id=&apos;+Id,&apos;Scan QR code to open record in mobile.&apos;)</formula>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>