2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/To_bill__c.field-meta.xml
<CustomField>
    <fullName>To_bill__c</fullName>
    <inlineHelpText>To select &apos;No&apos; if volume is already billed under artwork.</inlineHelpText>
    <label>To bill</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>