2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/tra_ID__c.field-meta.xml
<CustomField>
    <fullName>tra_ID__c</fullName>
    <formula>Transaction__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>tra ID</label>
    <type>Text</type>
</CustomField>