2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>unit of measurement</description>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>cm</fullName>
                <default>true</default>
                <label>cm</label>
            </value>
            <value>
                <fullName>inches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>