2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/WIP_Crate_Weight__c.field-meta.xml
<CustomField>
    <fullName>WIP_Crate_Weight__c</fullName>
    <inlineHelpText>To be indicated if crate weight needs extra precaution.</inlineHelpText>
    <label>WIP Crate Weight</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>