2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/fields/With_Legs__c.field-meta.xml
<CustomField>
    <fullName>With_Legs__c</fullName>
    <label>With Legs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>