2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/recordTypes/AMCrates.recordType-meta.xml
<RecordType>
    <fullName>AMCrates</fullName>
    <active>true</active>
    <label>AMCrates</label>
</RecordType>