2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/recordTypes/HHGCrate.recordType-meta.xml
<RecordType>
    <fullName>HHGCrate</fullName>
    <active>true</active>
    <label>HHGCrate</label>
</RecordType>