2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/validationRules/Update_collector_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_collector_field</fullName>
    <active>false</active>
    <errorConditionFormula>myCollector__c  &lt;&gt; Null</errorConditionFormula>
    <errorMessage>Please update the Collector</errorMessage>
</ValidationRule>