2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Job_Reference__c</columns>
    <columns>Dimensions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>This Month</label>
    <language>en_US</language>
    <sharedTo>
        <group>AMGrpSG</group>
    </sharedTo>
</ListView>