2nd training/Community/Community/Community1/force-app/main/default/objects/Crate__c/listViews/With_Crate_Id.listView-meta.xml
<ListView>
    <fullName>With_Crate_Id</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Job_Reference__c</columns>
    <columns>Dimensions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>myCollector__c</field>
        <operation>contains</operation>
        <value>West Kowloon Cultural District Authority</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>contains</operation>
        <value>chs19</value>
    </filters>
    <label>With Crate Id</label>
    <language>en_US</language>
    <sharedTo>
        <group>AMGrpSG</group>
    </sharedTo>
</ListView>